# 42AMazeing

./: Makefile  README.md  README_MAZEGEN.md  a_maze_ing.py  config.txt  errors.py  maze_txt  parser.py  pyproject.toml  test.txt  validator.py
src/: __init__.py  a_maze_ing.py  errors.py  file_manager.py  maze.py  maze_config.py  maze_generator.py  parser.py
src/algorithms/: breadth_first_search.py  kruskal.py  prim.py  recursive_backtracking.py
